--- a/flavivirus_rna_prot/grafico_alineamiento/por_partes/s1-preparar_entrada_grafico.ipynb
+++ b/flavivirus_rna_prot/grafico_alineamiento/por_partes/s1-preparar_entrada_grafico.ipynb
@@ -14,16 +14,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fernando/.local/lib/python2.7/site-packages/ipykernel_launcher.py:3: FutureWarning: read_table is deprecated, use read_csv instead, passing sep='\\t'.\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "archivo_entrada = \"/home/fernando/git/ag/zona_A/entrada\"\n",
     "#carga como df del archivo de entrada, el cual debe tener el formato:\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +124,20 @@
     "prot_df_salida.to_csv(\"//home/fernando/git/ag/zona_A/aa.csv\", index=False)\n",
     "rna_df_salida.to_csv(\"/home/fernando/git/ag/zona_A/rna.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -151,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
